[package]
name = "rust-redis"
version = "0.1.0"
edition = "2021"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "parse"
path = "examples/parse.rs"


[dependencies]
bytes = { version = "1", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
env_logger = "0.11.5"
log = "0.4.22"
